<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">WhiteBoard</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">WhiteBoard Memo</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_total" translatable="false">전체메모</string>
    <string name="menu_favorites" translatable="false">즐겨찾는 메모</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move">폴더이동</string>
    <string name="delete">삭제</string>
    <string name="delete_all">모두삭제</string>
    <string name="share">공유</string>
    <string name="channel_name">메모알림</string>
    <string name="channel_description">메모에 설정한 타이머 시각에 맞춰 오는 푸쉬알림</string>
    <string name="notification_title">메모 알림</string>
    <string name="notification_text">메모 내용을 확인하세요!</string>
    <string name="alert_dialog_alarm_title">알림 삭제</string>
    <string name="alert_dialog_alarm_text">기존 설정된 알림을 삭제하시겠습니까?</string>
    <string name="alert_dialog_memo_delete_title">메모 삭제</string>
    <string name="alert_dialog_memo_delete_text">메모를 삭제하시겠습니까?</string>
    <string name="alert_dialog_delete">삭제</string>
    <string name="alert_dialog_cancel">취소</string>

    <string name="file_name_shared_preference">settings-preference</string>
    <string name="key_auto_remove">auto-remove</string>
    <string name="key_lock">lock</string>

    <string name="item_settings_text">메모의 최종 작성 / 수정일부터 2주가 지나면 자동으로 메모를 휴지통에 버립니다. 메모를 즐겨찾기 하실 경우 자동삭제 대상에서 제외됩니다.</string>
    <string name="lock_caution_text">잠금 해제 이후 사용이 가능합니</string>
    <string name="lock_passcode_is_wrong">입력하신 암호가 틀립니다. 다시 입력해주세요.</string>

    <string name="settings_passcode_is_not_set">잠금 기능을 사용하시려면 먼저 비밀번호를 설정해 주세요.</string>

    <string name="backup_agreement_text">- 보안상의 이유로 백업기능은 인증이 반드시 필요합니다.\n- 백업된 파일은 최대 한달 간 보관됩니다.
        \n- <u>보안을 위해 아이디 분실시 찾을 수가 없습니다!</u>
        \n- <u>id를 잊지 않도록 주의하세요!</u>
    </string>
    <string name="backup_find_password_text">- <u>비밀번호 찾기</u></string>
    <string name="backup_password_info_text">비밀번호는 영문대소문자, 숫자, 특수문자를 포함,\n 10자 이상, 20자 이하로 설정되어야 합니다</string>
    <string name="backup_id_info_text">입력하신 id가 이메일 형식이 아닙니다</string>

    <string name="backup_login_register_success">등록완료</string>
    <string name="backup_login_sign_in_success">로그인 성공</string>
    <string name="backup_login_network_problem">인터넷 연결에 문제가 있는 것 같습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="backup_login_duplicate_problem">이미 존재하는 id 입니다. 다른 id로 시도해 주세요</string>
    <string name="backup_login_default_problem">오류 발생. 잠시 후 다시 시도해주세요.</string>
    <string name="backup_login_not_exist_problem">존재하지 않는 id이거나 비밀번호를 잘못 입력했습니다.</string>
    <string name="wrong_password_typing">잘못된 형식의 패스워드입니다. 다시 입력해 주세요.</string>
    <string name="not_same_password_typing">패스워드가 일치하지 않습니다. 다시 입력해 주세요.</string>

    <string name="backup_verify_not_finished">이메일 확인이 완료되지 않았습니다. 메일함을 확인해 주세요.</string>
    <string name="backup_verify_address">%s</string>
    <string name="backup_verify_waiting">이메일 인증 대기 중...</string>

    <string name="backup_home_history_date_title">백업 일시</string>
    <string name="backup_home_history_deadline_title">백업 파일 보관 기한</string>
    <string name="backup_home_history_os_title" translatable="false">백업한 기기의 OS</string>
    <string name="backup_home_history_size_title" translatable="false">백업 데이터 크기</string>
    <string name="backup_home_help_feature_purpose" translatable="false">메모 백업 기능은 폰 교체시 이전 휴대폰에서 사용하시던 메모를 새 폰에서 다운받아 사용하기 위한 서비스입니다.</string>
    <string name="backup_home_help_only_one_file_available" translatable="false">한 개의 메모 데이터 파일만 백업 보관 가능합니다.</string>
    <string name="backup_home_help_one_month_limit" translatable="false">백업된 데이터 파일은 최대 한 달 간만 보관 되며 이후 자동 삭제됩니다.</string>
    <string name="backup_home_empty_string" translatable="false">메모 백업 기록이 없습니다.\n백업된 파일이 이곳에 보이게 됩니다.</string>
    <string name="backup_home_restore_string">데이터 복원을 원하시면 여기를 터치하세요</string>

    <string name="progressbar_waiting" translatable="false">로딩 중...</string>

    <string name="backup_password_reset_new_password_text">새 비밀번호를 입력하세요</string>
    <string name="backup_password_reset_new_password_hint">영문 대소문자, 특수문자, 숫자, 10자 이상, 20자 이하</string>
    <string name="backup_password_reset_password_again_text">비밀번호를 다시 한번 입력하세요</string>

    <string name="backup_send_password_reset_email_text">비밀번호를 찾으실 id를 입력하세요</string>

    <string name="send_email_completed">이메일 전송 완료. 메일함에서 비밀번호를 변경하세요</string>
    <string name="email_not_exist">가입되지 않은 이메일 주소입니다.</string>
    <string name="max_retry_count">최대 전송 가능 횟수를 초과했습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="horizontal_progress_download_text">다운로드 진행 중...</string>
    <string name="horizontal_progress_upload_text">업로드 진행 중...</string>
    <string name="horizontal_progress_restore_text">데이터베이스 복구 진행 중...</string>
    <string name="horizontal_progress_delete_text">삭제 진행 중...</string>

    <string name="register_title_text">회원가입</string>
    <string name="register_email_text">백업기능을 사용하시기 위해서는 \n회원가입이 필요합니다</string>

    <string name="hint_input_email">E-Mail 입력</string>
    <string name="hint_input_phone_number">휴대전화번호는 -없이 숫자만 입력해주세요</string>
    <string name="register">등록</string>

    <string name="id_text">ID</string>
    <string name="password_text">비밀번호</string>
    <string name="re_password_text">비밀번호 재입력</string>
    <string name="phone_number_text">휴대전화번호</string>
    
    <string name="error_no_device_authentication">휴대전화의 잠금 수단이 설정되지 않았습니다. 잠금 수단 설정 후 이용 가능합니다.</string>
    <string name="lock_authentication_title">메모 잠금 기능 사용을 위한 인증입니다</string>
    <string name="lock_authentication_subtitle">지문 혹은 휴대전화 비밀번호를 입력하세요</string>
    <string name="lock_authentication_background_title_bio">지문 혹은 비밀번호 인증</string>
</resources>
