<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mode_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:contentDescription="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mode_move"
        android:icon="@drawable/ic_move"
        android:title="@string/move"
        android:contentDescription="@string/move"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mode_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="always" />
</menu>
